run rubocop and remove yarn integrity check for development

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,7 +9,8 @@ AllCops:
     - !ruby/regexp /old_and_unused\.rb$/
     - 'Rakefile'
     - 'bin/**/*'
-    
+    - 'node_modules/**/*'
+
 Documentation:
   Enabled: false
 
